--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     url: jdbc:mysql://${sky.datasource.host}:${sky.datasource.port}/${sky.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: ${sky.datasource.username}
     password: ${sky.datasource.password}
+#  servlet:
+#    multipart:
+#      max-file-size: 10MB
+#      max-request-size: 100MB
 
 mybatis:
   #mapper配置文件
@@ -55,3 +59,12 @@ knife4j:
   enable: true # 是否启用 Knife4j 增强功能，true 表示启用
   setting:
     language: zh_cn # 界面语言，这里设置为简体中文（zh_cn）
+
+#阿里云OSS
+aliyun:
+  oss:
+    endpoint: https://oss-cn-beijing.aliyuncs.com
+    bucketName: cell-sky-take-out
+    region: cn-beijing
+
+
