--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <commons.lang>3.12.0</commons.lang>
         <druid>1.2.20</druid>
         <pagehelper>1.3.0</pagehelper>
-        <aliyun.sdk.oss>3.10.2</aliyun.sdk.oss>
+        <aliyun.sdk.oss>3.17.4</aliyun.sdk.oss>
         <aspectj>1.9.21</aspectj>
         <poi>5.2.5</poi>
         <java.version>21</java.version>
@@ -115,6 +115,16 @@
                 <groupId>jakarta.xml.bind</groupId>
                 <artifactId>jakarta.xml.bind-api</artifactId>
                 <version>3.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.activation</groupId>
+                <artifactId>jakarta.activation</artifactId>
+                <version>2.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>4.0.3</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.poi</groupId>
