--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <lombok>1.18.32</lombok>
         <commons.lang>3.12.0</commons.lang>
         <druid>1.2.20</druid>
-        <pagehelper>1.3.0</pagehelper>
+        <pagehelper>1.4.7</pagehelper>
         <aliyun.sdk.oss>3.17.4</aliyun.sdk.oss>
         <aspectj>1.9.21</aspectj>
         <poi>5.2.5</poi>
@@ -45,6 +45,13 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>2.16.1</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>3.3.3</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
