--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -11,10 +11,12 @@ spring:
     url: jdbc:mysql://${sky.datasource.host}:${sky.datasource.port}/${sky.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: ${sky.datasource.username}
     password: ${sky.datasource.password}
-#  servlet:
-#    multipart:
-#      max-file-size: 10MB
-#      max-request-size: 100MB
+  data:
+    redis:
+      host: ${sky.redis.host}
+      port: ${sky.redis.port}
+      password: ${sky.redis.password}
+      database: ${sky.redis.database}
 
 mybatis:
   #mapper配置文件
@@ -52,13 +54,18 @@ springdoc:
   group-configs: # 支持多个接口分组配置，方便大型项目拆分不同模块接口文档
     - group: 'default' # 分组名，设置默认分组 default
       paths-to-match: '/**' # 该分组扫描的接口路径，这里匹配所有接口 /**
-      packages-to-scan: com.sky.controller # 扫描的包路径，这里只扫描 com.sky 这个包里的 Controller，扫描出来的文档就放到当前设置的分组
+      packages-to-scan: com.sky.controller.admin # 扫描的包路径，这里只扫描 com.sky 这个包里的 Controller，扫描出来的文档就放到当前设置的分组
+    - group: 'user'
+      paths-to-match: '/**'
+      packages-to-scan: com.sky.controller.user
+
 
 # knife4j 的增强配置，不需要增强可以不配
 knife4j:
   enable: true # 是否启用 Knife4j 增强功能，true 表示启用
   setting:
     language: zh_cn # 界面语言，这里设置为简体中文（zh_cn）
+    default-open-api-group: admin
 
 #阿里云OSS
 aliyun:
@@ -66,5 +73,6 @@ aliyun:
     endpoint: https://oss-cn-beijing.aliyuncs.com
     bucketName: cell-sky-take-out
     region: cn-beijing
+
 
 
