--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>3.3.3</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-cache</artifactId>
+                <version>3.3.3</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.alibaba</groupId>
